<resources>
    <string name="app_name">Alc 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">welcome to Alc 4.0</string>
    <string name="about_txt">ABOUT ALC</string>
    <string name="profile_txt">MY PROFILE</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="profile_pic">profile_pic</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: nigeria</string>
    <string name="fullname">Umezurike Chidi</string>
    <string name="email">Email: sunnychidi247@gmail.com</string>
    <string name="phone_number">Phone number: 08170186878</string>
    <string name="slack_username">Slack Username: chidimez</string>
    <string name="title_activity_webview">About ALC</string>
</resources>
